# handler

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  justfile  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
assets/a2a-knowledge/: a2a-spec-v0.3.0.md  handler-docs.md
src/a2a_handler/: __init__.py  a2a_service.py  auth.py  cli.py  client.py  knowledge.py  push_server.py  server.py  service.py  session.py  tui.py  validation.py  webhook.py
src/a2a_handler/cli/: _config.py  mcp.py  task.py
src/a2a_handler/common/: __init__.py  formatting.py  logging.py  output.py  printing.py
src/a2a_handler/components/: contact.py  footer.py  input.py  messages.py
src/a2a_handler/mcp/: server.py
src/a2a_handler/tui/: __init__.py  app.py  app.tcss
src/a2a_handler/tui/components/: __init__.py  card.py  contact.py  footer.py  input.py  logs.py  messages.py  tasks.py
src/handler/: __init__.py  pyproject.toml  tui.py  tui.tcss
src/handler/components/: __init__.py  agent_card.py  input.py  messages.py
tests/: __init__.py  test_auth.py  test_cli_auth.py  test_cli_card.py  test_cli_helpers.py  test_cli_message.py  test_cli_session.py  test_formatting.py  test_output.py  test_service.py  test_session.py  test_task.py  test_tui.py  test_validation.py  test_webhook.py
