[project]
name = "a2a-handler"
dynamic = ["version"]
description = "An A2A Protocol client TUI and CLI."
requires-python = ">=3.11"
dependencies = [
    "handler-cli",
    "handler-server",
    "handler-client",
    "handler-common",
    "textual>=0.47.0",
    "httpx>=0.27.0",
]

[tool.uv.workspace]
members = ["packages/*", "src/handler"]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "textual-dev>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ty>=0.0.1a27",
]

[project.scripts]
handler = "handler_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "packages/common/src/handler_common/_version.py"

[tool.uv.sources]
handler-cli = { workspace = true }
handler-server = { workspace = true }
handler-client = { workspace = true }
handler-common = { workspace = true }
