[project]
name = "a2a-handler"
version = "0.1.3"
description = "An A2A Protocol client TUI and CLI."
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk>=0.2.5",
    "click>=8.0.0",
    "google-adk>=0.5.0",
    "httpx>=0.27.0",
    "litellm>=1.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "textual>=0.47.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "textual-dev>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ty>=0.0.1a27",
]

[project.scripts]
handler = "a2a_handler.cli:main"

[build-system]
requires = ["uv_build>=0.7,<0.8"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
