[project]
name = "handler-app"
dynamic = ["version"]
description = "Handler TUI application"
requires-python = ">=3.11"
dependencies = [
    "handler-client",
    "textual>=0.47.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "../../packages/common/src/handler_common/_version.py"
